objects/Market_Collateral__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Market Collaterals</relationshipLabel>
        <relationshipName>Market_Collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicable_Party__c</fullName>
        <label>Applicable Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Counterparty</fullName>
                    <default>true</default>
                    <label>Counterparty</label>
                </value>
                <value>
                    <fullName>Absa</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Comments__c</fullName>
        <label>Collateral Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Securities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Issue__c</fullName>
        <label>Country of Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Collateral_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Collateral_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HotDocs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HotDocs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Collateral_Type__c</fullName>
        <label>Market Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible Collateral</fullName>
                </value>
                <value>
                    <fullName>Regulatory Collateral</fullName>
                </value>
                <value>
                    <fullName>Acceptable Collateral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Collateral_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Securities</fullName>
                </value>
                <value>
                    <fullName>Uncertified Debt Securities</fullName>
                </value>
                <value>
                    <fullName>Uncertified Equities</fullName>
                </value>
                <value>
                    <fullName>Certified Equities</fullName>
                </value>
                <value>
                    <fullName>Maturity at issuance &lt; 1 year</fullName>
                </value>
                <value>
                    <fullName>Maturity at issuance &gt;1 year but &lt;10 years</fullName>
                </value>
                <value>
                    <fullName>Maturity at issuance &gt; 10 years</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supporting Agreement</label>
        <referenceTo>Supporting_Agreement__c</referenceTo>
        <relationshipLabel>Market Collaterals</relationshipLabel>
        <relationshipName>Market_Collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Market Collateral</label>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Market Collateral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>